Fixes button size on Safari

--- a/style/app.css
+++ b/style/app.css
@@ -114,7 +114,7 @@ section {
   line-height: calc( 1.8rem * 1.5 );
   text-transform: uppercase;
   letter-spacing: .2rem;
-  padding: 2.4rem;
+  padding: .8rem 2.4rem;
   height: 6.4rem;
   display: inline-flex;
   justify-content: center;
